mvp framework, register

--- a/app/src/main/res/layout/activity_newnote.xml
+++ b/app/src/main/res/layout/activity_newnote.xml
@@ -48,9 +48,11 @@
 
         <TableRow>
             <TextView android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
+                android:background="?attr/colorButtonNormal"
+                android:padding="5dp"
                 android:textSize="20dp"
-                android:text="@string/note_label"/>
+                android:text="@string/note_label_default"/>
             </TableRow>
     </TableLayout>
 
